# package_ses_tracking

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  __init__.py  admin.py  apps.py  backend.py  models.py  requirements.txt  serializers.py  setup.cfg  setup.py  urls.py  views.py
management/commands/: aggregate_daily_stats.py  backfill.py
migrations/: 0001_initial.py  0002_sesevent_reject_reason_alter_sesevent_event_type.py  0003_dailyemailstats_sesevent_email_message_id_and_more.py  0004_sesevent_email_subject_sesevent_email_to.py
templates/ses_tracking/bounces_complaints/: list.html
templates/ses_tracking/daily_stats/: list.html
