[metadata]
name = django-ses-tracking
version = 1.0.0
description = Django app for tracking AWS SES email events
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Canusia/package_ses_tracking
author = Canusia
author_email = info@canusia.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    Django>=3.2
    boto3>=1.26.0
    python-dateutil>=2.8.0
    django-mailer>=2.1.0